crates/template-macro/test/jinja_fail/main.stderr
error: expected string literal
  --> test/jinja_fail/main.rs:12:18
   |
12 |          [hello, 20],
   |                  ^^
